Fix ads overlapping navbar on mobile

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -48,7 +48,7 @@ code
     min-width: 0
 
 #carbonads
-    @apply block relative rounded max-w-full font-ubuntu interactive-box
+    @apply block relative rounded max-w-full font-ubuntu interactive-box -z-50
 
     width: 420px
 
